--- a/src/main/resources/templates/semester_form.html
+++ b/src/main/resources/templates/semester_form.html
@@ -61,7 +61,7 @@
         }
 
         button[type="submit"] {
-            background-color: #4CAF50;
+            background: linear-gradient(to right, #667eea 0%, #764ba2 100%);
             color: white;
             border: none;
             padding: 12px;
@@ -74,7 +74,7 @@
         }
 
         button[type="submit"]:hover {
-            background-color: #45a049;
+            background: black;
         }
 
         input[type="hidden"] {
