--- a/src/main/resources/static/style/navbar.css
+++ b/src/main/resources/static/style/navbar.css
@@ -1,49 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background: #f5f7fa;
-    width: 100%;
-    height: 100vh;
-}
-h1 {
-    color: white;
-    margin-bottom: 40px;
-}
-.btn-container {
-    display: flex;
-    gap: 20px;
-}
-.btn {
-    background: rgba(255, 255, 255, 0.2) !important;
-    color: black !important;
-    padding: 14px 22px;
-    font-size: 16px;
-    font-weight: bold;
-    border: 1px solid darkslateblue;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-    transition: background-color 0.3s ease !important;
-}
-.btn:hover {
-    background: rgba(255, 255, 255, 0.4) !important;
-    border: 1px solid lightgray;
-    transform: scale(1.1) !important;
-}
-.btn-fixed-md {
-    width: 280px !important;
-}
-.custom-margin{
-    margin-top: 80px !important;
-}
-.footer-margin{
-    margin-top: 400px !important;
-}
-
-a{
-    color: white;
-    text-decoration: none;
-}
-
 .custom-yellow-btn {
     display: inline-flex;
     align-items: center;
@@ -62,6 +16,7 @@ a{
     transition: background-color 0.2s ease, box-shadow 0.2s ease;
 }
 
+
 .custom-yellow-btn:hover {
     background-color: #ca8a04;
     color: #ffffff;
@@ -78,18 +33,23 @@ a{
     font-size: 1rem;
     font-weight: 600;
 
-    color: #ffffff;
+    color: #ffffff !important;
     background-color: transparent;
     border: none;
     border-radius: 0.375rem;
 
     transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
 }
-
 .dash-btn:hover{
     background-color: #e5e7eb;
-    color: #1d4ed8;
+    color: #1d4ed8 !important;
 }
+
+.dash-btn a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .navbar-brand {
     font-size: 2.5rem;
     font-family: Arial, sans-serif;
@@ -100,12 +60,6 @@ a{
     text-decoration: underline !important;
 }
 
-.li-icon:hover{
-    color: #0077b5 !important;
-}
-.fb-icon:hover{
-    color: #1877F2;
-}
 .navbar {
     width: 100%;
     height: 80px !important;
@@ -128,8 +82,8 @@ a{
     font-weight: bold;
 }
 .nav-link {
-    color: white;
-    text-decoration: none;
+    color: white !important;
+    text-decoration: none !important;
     font-weight: bold;
     font-size: 1.1em;
     padding: 8px 16px;
@@ -145,37 +99,11 @@ a{
     color: black;
 }
 
-.carousel-item{
-    height: 100vh !important;
-}
-#carouselExampleDark,
-#carouselExampleDark .carousel-inner,
-#carouselExampleDark .carousel-item {
-    height: 100vh;
-}
-.carousel-caption {
-    color: #eab308 !important;
-    font-weight: bold;
-}
-
-.carousel-indicators{
-    color: #eab308 !important;
-    font-weight: bold;
-}
-#carouselExampleDark .carousel-item img {
-    height: 100%;
-    width: 100%;
-
-}
-
-.fascinate-inline-regular {
-    font-family: "Fascinate Inline", system-ui;
-    font-weight: 400;
-    font-style: normal;
-}
-
 @media (max-width: 768px) {
     .navbar-brand{
         font-size: 1.5rem !important;
+    }
+    .navbar{
+        height: max-content;
     }
 }
