--- a/src/main/resources/templates/all_users.html
+++ b/src/main/resources/templates/all_users.html
@@ -2,11 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title> Users </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/style/navbar.css}">
     <style>
         body {
             font-family: Arial, sans-serif;
             background: #f9f9f9;
-            padding: 30px 20px;
+            padding-top: 110px;
+            padding-bottom: 20px;
             margin: 0;
             color: #333;
         }
@@ -123,6 +126,30 @@
     </style>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background: linear-gradient(to left, #667eea 0%, #764ba2 100%);">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white fw-bold" href="/home">Academics Automation Software</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <button class="dash-btn" > <a href="/home" style="text-decoration: none">Home</a></button>
+                </li>
+                <li class="nav-item">
+                    <button id="dash-btn" class="dash-btn"><a href="/dashboard" style="text-decoration: none">Dashboard</a></button>
+                </li>
+                <li class="nav-item">
+                    <button class="custom-yellow-btn" onclick="logout()">Logout</button>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
 <div class="container">
     <h1>All Users</h1>
     <a th:href="@{/users/new}" class="add-new">Add New User</a>
@@ -157,5 +184,7 @@
         </tbody>
     </table>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script th:src="@{/js/auth.js}"></script>
 </body>
 </html>
