--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,14 +4,16 @@
     <title>Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/lib/bootstrap/css/bootstrap.min.css}">
+<!--    <link rel="stylesheet" th:href="@{/lib/bootstrap/css/bootstrap.min.css}">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/lib/fontawesome/css/all.min.css}">
 
     <link rel="stylesheet" th:href="@{/style/landing.css}">
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg shadow fixed-top" style="background: linear-gradient(to left, #667eea 0%, #764ba2 100%);">
+
+<nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background: linear-gradient(to left, #667eea 0%, #764ba2 100%);">
     <div class="container-fluid">
         <a class="navbar-brand text-white fw-bold" href="/home">Academics Automation Software</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,7 +109,8 @@
 
     </div>
 </footer>
-<script th:src="@{/lib/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!--<script th:src="@{/lib/bootstrap/js/bootstrap.bundle.min.js}"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script th:src="@{/js/auth.js}"></script>
 </body>
 </html>
