--- a/src/main/resources/templates/admin_dashboard.html
+++ b/src/main/resources/templates/admin_dashboard.html
@@ -2,31 +2,106 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>User Dashboard</title>
+    <link rel="stylesheet" th:href="@{/lib/fontawesome/css/all.min.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/style/navbar.css}">
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .profile { margin-bottom: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 8px; width: 300px; }
-        .profile h2 { margin-top: 0; }
-        .btn-container { display: flex; gap: 10px; flex-wrap: wrap; }
-        .btn { padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; }
-        .btn:hover { background-color: #0056b3; }
+        body { font-family: Arial, sans-serif; margin: 0; padding-top: 80px; height: 100%;}
+        .profile {
+            margin-bottom: 20px; padding: 15px;
+            border-radius: 8px;
+            width: max-content;
+            background: #ffffff;
+            border-left: 5px solid #764ba2;
+        }
+        .body-container{
+            padding: 30px;
+        }
+        .user-icon{
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            font-size: 40px;
+        }
+        .edit-desig{
+            padding-left: 8px;
+            border: none;
+            background: none;
+            color: #764ba2;
+            transition: 0.2s;
+        }
     </style>
 </head>
-<body>
 
-<h1>Welcome, <span th:text="${user.name}">User</span>!</h1>
+<body class="min-vh-100 d-flex flex-column">
+<nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background: linear-gradient(to left, #667eea 0%, #764ba2 100%);">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white fw-bold" href="/home">Academics Automation Software</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <button class="dash-btn" > <a href="/home" style="text-decoration: none">Home</a></button>
+                </li>
 
-<div class="profile">
-    <h2>Profile Information</h2>
-    <p><strong>Email:</strong> <span th:text="${user.email}">email@example.com</span></p>
-    <p><strong>Department:</strong> <span th:text="${user.department}">Department</span></p>
-    <p><strong>Designation:</strong> <span th:text="${user.designation}">Designation</span></p>
-    <p><strong>Role:</strong> <span th:text="${user.role}">Role</span></p>
-    <p><strong>Phone:</strong> <span th:text="${user.phone}">Phone</span></p>
+                <li class="nav-item">
+                    <button class="custom-yellow-btn" onclick="logout()">Logout</button>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
+
+<div class="body-container flex-grow-1">
+    <h1>Welcome, <span th:text="${user.name}">User</span>!</h1>
+    <div class="profile shadow text-dark">
+        <div class="user-icon-container d-flex justify-content-center">
+            <i class="fas fa-user-alt me-2 user-icon"></i>
+        </div>
+        <p class="d-flex flex-row gap-1"><strong>Designation:</strong> <span th:text="${user.designation}">Designation</span> <a class="edit-desig" th:href="@{/user/edit-designation/{id}(id=${user.userId})}"><i class="fas fa-edit"></i> </a> </p>
+        <p><strong>Department:</strong> <span th:text="${user.department}">Department</span></p>
+        <p><strong>University:</strong> <span th:text="${user.university}">University</span></p>
+        <p><strong>Role:</strong> <span th:text="${user.role}">Role</span></p>
+        <p><strong>Phone:</strong> <span th:text="${user.phone}">Phone</span></p>
+        <p><strong>Email:</strong> <span th:text="${user.email}">email@example.com</span></p>
+        <a id="password-reset" th:if="${owner} == 'self'" class="btn btn-sm btn-outline-danger" href="/user/reset-password">Reset Password</a>
+    </div>
 </div>
 
-<div class="course-container">
+<footer class="bg-dark text-white p-4">
+    <div class="text-left mb-3">
+        <h4>Links</h4>
+        <a href="https://ict.mbstu.ac.bd/" class="link text-primary">ICT, MBSTU</a> <br>
+        <a href="" class="link text-primary">ICT Alumni Association</a>
+    </div>
+    <div class="container text-center align-items-center mx-auto">
+        <p class="mb-1">Dept. of ICT, MBSTU © 2025 All Rights Reserved </p>
+        <div class="d-flex justify-content-center align-items-center gap-1 text-center">
+            <p class="mb-0">Developed by</p>
+            <p class="mb-0">
+                <a href="https://www.linkedin.com/in/montasirfahim/" class="link text-primary">
+                    Montasir Fahim,
+                </a>
+            </p>
+            <p class="mb-0">ICT'19</p>
+            <a href="https://www.linkedin.com/in/montasirfahim/" class="li-icon">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://www.facebook.com/fahim.ffff/" class="fb-icon">
+                <i class="fab fa-facebook"></i>
+            </a>
+        </div>
 
-</div>
+    </div>
+</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script th:src="@{/js/auth.js}"></script>
 </body>
 </html>
